--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -136,12 +136,18 @@ header .container.navbar { margin-bottom: 0; }
         text-decoration: underline;
       }
 
-      &.small > a,
-      &.small > img { width: @thumbnail-width-small; }
+      &.small img,
+      &.medium img,
+      &.large img {
+        width: auto;
+        max-width: 100%;
+      }
+      &.small  > a,
+      &.small  > img { width: @thumbnail-width-small; }
       &.medium > a,
       &.medium > img { width: @thumbnail-width-medium; }
-      &.large > a,
-      &.large > img { width: @thumbnail-width-large; }
+      &.large  > a,
+      &.large  > img { width: @thumbnail-width-large; }
     }
   }
 }
